added bus feature
